[package]
name = "proxy-attestation-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = { version = "0.13.0", default-features = false }
err-derive = "0.2"
log = "0.4.13"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "multipart"] }
uuid = { version = "1.1.2", features = ["serde"] }
